# fred-rs

./: Cargo.toml
